--- a/src/index.css
+++ b/src/index.css
@@ -9,15 +9,26 @@
     --color-text-secondary: #8E8E93;
   }
   
+  * {
+    color: #F2F2F7;
+  }
+  
   body {
     background-color: #1C1C1E;
     color: #F2F2F7;
     font-family: -apple-system, BlinkMacSystemFont, 'Inter', 'San Francisco', 'Segoe UI', system-ui, sans-serif;
     margin: 0;
     min-height: 100vh;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
   
   a {
     text-decoration: none;
+    color: inherit;
+  }
+  
+  button {
+    cursor: pointer;
   }
 }
